--- a/widgets/testimonial/styles/default.less
+++ b/widgets/testimonial/styles/default.less
@@ -122,9 +122,6 @@
 					}
 				}
 
-				.sow-testimonial-text {
-					margin-left: 33%;
-				}
 			}
 
 			&.sow-user-right {
@@ -139,10 +136,6 @@
 						max-width: 100%;
 						height: auto;
 					}
-				}
-
-				.sow-testimonial-text {
-					margin-right: 33%;
 				}
 
 			}
